update 26-08-2022 table of content update

--- a/Template LaTeX/TeXFiles/EnvironnementDeTravail.tex
+++ b/Template LaTeX/TeXFiles/EnvironnementDeTravail.tex
@@ -1,16 +1,14 @@
-\chapter{Environnement de travail}
+\chapter{Conception du projet}
 \label{sec:EnvironnementDeTravail}
-Durant la réalisation de ce projet, nous avons essayé d’utiliser différents
-outils de développement, d’une part afin de rendre la tâche de la
-réalisation plus facile, d’autre part pour que notre système soit robuste et
-répond parfaitement a nos besoins , et que nos interfaces soient claires et
-faciles à utiliser.
-%\section{Gestion du projet}
-%Cette section est pour la présentation de mé-stratégie de fonctionnement et le programme de gestion de projets que j'ai utilisé pour lancer, structurer et gérer le travail sur ma solution.
-\section{Conception}
-Dans cette section, je présente le langage et le logiciel de modélisation que j’ai utilisé pour concevoir
-notre solution.
-\subsection{Langage de modélisation : UML}
+%Durant la réalisation de ce projet, nous avons essayé d’utiliser différents
+%outils de développement, d’une part afin de rendre la tâche de la
+%réalisation plus facile, d’autre part pour que notre système soit robuste et
+%répond parfaitement a nos besoins , et que nos interfaces soient claires et
+%faciles à utiliser.
+
+\section{Choix de langage de modélisation :}
+%Dans cette section, je présente le langage et le logiciel de modélisation que j’ai utilisé pour concevoir notre solution.
+\subsection{UML}
 On a utilisé UML comme langage de modélisation.
 Langage de modélisation unifié UML (Unified modeling Langage) un
 consiste a modéliser une application logicielle d'une façon standard
@@ -18,9 +16,12 @@ dans le cadre de conception orientée objet.
 UML consiste a couvrir le cycle de vie d'un logiciel depuis la
 spécification des besoins jusqu'au codage en offrant plusieurs
 moyens de description et de modélisation des acteurs.
-\subsection{Logiciel de modélisation} 
-Visual Paradigm Online est un outil de création de diagrammes en ligne. Vous pouvez créer un nombre illimité de diagrammes, graphiques et autres visuels à partir d’un large éventail de types de diagrammes, y compris UML, organigrammes, BPMN, ERD, DFD, ArchiMate et autres.\newline\newline
+\section{Choix de logiciel de modélisation :}
+\subsection{Visual Paradigm  en ligne} 
+Visual Paradigm  en ligne est un outil de création de diagrammes en ligne. Vous pouvez créer un nombre illimité de diagrammes, graphiques et autres visuels à partir d’un large éventail de types de diagrammes, y compris UML, organigrammes, BPMN, ERD, DFD, ArchiMate et autres.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Tests %%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Diagramme UML}
+\begin{comment}
 \begin{table}
 		
 	\caption{Rôles des diagrammes UML utilisés.}
@@ -41,10 +42,29 @@ Visual Paradigm Online est un outil de création de diagrammes en ligne. Vous po
 	logiciel pour modéliser un problème bien précis, sous forme des classes et des
 	interfaces ainsi que les différentes relations entre celles-ci. \\
 	\hline
+	
 \end{tabular}
+
 \end{table}
+\end{comment}
 %Table \ref{table:kysymys} on page \pageref{table:kysymys} refers to the ...
-\section{Implémentation}
+
+\subsection{Diagramme de cas d’utilisation}
+\subsection{Diagramme d’activité}
+\subsection{Diagramme de séquence}
+\subsection{Diagramme de classe}
+
+
+\chapter{Les technologies utilisées}
+\begin{comment}
+\section{Les Framework}
+\subsection{Qu'est-ce qu'un framework ?}
+Un framework designe un ensemble de composants logiciels formant le squelette d'un programme, concu pour aider les developpeurs informatiques dans leur travail de programmation et leur offrir une base de travail reutilisable sur plusieurs projets.
+Un framework s'apparente a un veritable espace de travail modulaire,reunissant les outils,les ressources et les conventions ou normes necessaires a la creation d'applications web sur mesure. Traduit litteralement, le mot anglais framework sig
+\end{comment}
+\begin{comment}
+\chapter{Implémentation}
+\end{comment}
 Durant la réalisation de ce projet, nous avons essayé d’utiliser différents
 outils de développement, d’une part afin de rendre la tâche de la
 réalisation plus facile, d’autre part pour que notre système soit robuste et
@@ -60,7 +80,7 @@ Flutter est un framework de développement d’applications mobiles open source 
 d’applications multiplateformes. Flutter est également utilisé pour créer des apps interactives qui s’exécutent sur des pages web ou sur le bureau.
 \subsubsection{Editeur de texte : VS Code}
 VS Code (Visual Studio Code) est un éditeur de code source réalisé par Microsoft pour Win-
-dows, Linux et macOS. [9] Les fonctionnalités incluent la prise en charge du débogage, lacoloration
+dows, Linux et macOS.Les fonctionnalités incluent la prise en charge du débogage, lacoloration
 syntaxique, la saisie semi-automatique intelligente du code, les extraits de code, la refactorisation du
 code et Gitintégré. Les utilisateurs peuvent modifier le thème,les raccourcis clavier,les préférences et
 installer des extensions qui ajoutent des fonctionnalités supplémentaires.\newline Pour en savoir plus, veillez
@@ -153,6 +173,7 @@ grandement la tâche aux développeurs.
 	\item [-] \textbf{Vue : } la vue réceptionne la réponse qui est envoyée par le
 	contrôleur .\newline
 \end{enumerate}
+
 Ce figure ci-dessous résume en quelque sort le fonctionnement de
 notre application.
 L’api est considéré comme l’intermédiaire entre la partie données
@@ -163,6 +184,7 @@ L’api est considéré comme l’intermédiaire entre la partie données
 	\label{fig:birds}
 \end{figure}
 \newline \newline \newline
+
 
 
 
