--- a/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
+++ b/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
@@ -1,4 +1,4 @@
-\chapter{Présentation de la société}
+\chapter{Présentation de l’entreprise}
 \label{chap:introduction}
 %\pagenumbering{arabic}
 \section{Introduction}
