--- a/document.tex
+++ b/document.tex
@@ -35,7 +35,8 @@
 \setcounter{tocdepth}{3}
 \setcounter{secnumdepth}{3}
 \usepackage{lipsum}
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% bloc of comment %%%%%%%%%%%%%%%%5
+\usepackage{verbatim}
 \begin{document} 
 	\begin{titlepage}
 		%------------------------------------------------------------------------  04
