--- a/Template LaTeX/TeXFiles/EnvironnementDeTravail.tex
+++ b/Template LaTeX/TeXFiles/EnvironnementDeTravail.tex
@@ -48,12 +48,47 @@ Visual Paradigm  en ligne est un outil de création de diagrammes en ligne. Vous
 \end{table}
 \end{comment}
 %Table \ref{table:kysymys} on page \pageref{table:kysymys} refers to the ...
-
+\newpage
 \subsection{Diagramme de cas d’utilisation}
+\begin{figure}[h!]
+	\includegraphics[width=18cm, height=21cm]{./Template LaTeX/Images/use_case.png}
+	\caption{Diagramme de cas d’utilisation.}
+	\label{fig1:use_case}
+	
+	
+\end{figure}
 \subsection{Diagramme d’activité}
-\subsection{Diagramme de séquence}
-\subsection{Diagramme de classe}
 
+Le diagramme d’activité qu’illustre la figure 3.2 décrit le cas d’utilisation « Créer un compte ».
+\begin{figure}[h!]
+	\includegraphics[width=18cm, height=20cm]{./Template LaTeX/Images/ins_act.png}
+\caption{Diagramme d’activité : Création de compte}
+\label{fig3:activite}
+\end{figure}
+\newpage
+Le diagramme d’activité qu’illustre la figure 3.3 décrit les différentes actions ou enchainements
+effectués lors d’une opération de transfert d’argent.
+\begin{figure}[h!]
+	\includegraphics[width=18cm, height=21cm]{./Template LaTeX/Images/trans_act.png}
+	\caption{Diagramme d'activité : Transfert d'argent}
+	\label{fig3:activite}
+\end{figure}
+\newpage
+Le diagramme d’activité qu’illustre la figure 3.4 décrit le cas d’utilisation « Authentification ».
+\begin{figure}[h!]
+	\includegraphics[width=18cm, height=21cm]{./Template LaTeX/Images/auth_act.png}
+	\caption{Diagramme d'activité : Authentificationt}
+	\label{fig3:activite}
+\end{figure}
+\newpage
+%\subsection{Diagramme de séquence}
+%\newpage
+\subsection{Diagramme de classe}
+\begin{figure}[h!]
+	\includegraphics[width=18cm, height=21cm]{./Template LaTeX/Images/Diagramme_de_classe.png}
+	\caption{Diagramme d'activité : Transfert d'argent}
+	\label{fig3:class}
+\end{figure}
 
 \chapter{Les technologies utilisées}
 \begin{comment}
@@ -101,9 +136,14 @@ d’applications multiplateformes. Flutter est également utilisé pour créer d
 	\item Open-source et par Google
 	\item Programmation Dart \newline \newline \newline
 \end{enumerate}
+\newpage
 
-\textbf {- Architecture d’une application Flutter :}\newline \newline \newline
+\textbf {- Architecture d’une application Flutter :} \newline \newline \newline
+\begin{figure}[h!]
 \includegraphics[width=400px,height=200px]{./Template LaTeX/Images/Flutter_architect.png}
+\caption{Architecture d’une application Flutter.}
+\label{fig:birds}
+\end{figure}
 \subsubsection{IDE : Android Studio}
 Android Studio est un environnement de développement pour développer des applications mobiles Android. Il est basé sur IntelliJ IDEA et utilise le moteur de production Gradle. Il peut être téléchargé sous les systèmes d'exploitation Windows, macOS, Chrome OS et Linux.
 \newline Pour en savoir plus, veillez
@@ -184,6 +224,7 @@ L’api est considéré comme l’intermédiaire entre la partie données
 	\label{fig:birds}
 \end{figure}
 \newline \newline \newline
+
 
 
 
