--- a/p1.tex
+++ b/p1.tex
@@ -19,9 +19,9 @@
 		\begin{figure}[htbp]
 			\hbox{
 				\hspace*{-1.4cm}
-				\includegraphics[width=100px]{/home/mohamed/mes_fichier/CADORIM/LaTeX/pfe/Template LaTeX/Images/ISCAE.jpg}
+				\includegraphics[width=100px]{./Template LaTeX/Images/ISCAE.jpg}
 				\hspace*{11cm}
-				\includegraphics[width=80px]{/home/mohamed/mes_fichier/CADORIM/LaTeX/pfe/Template LaTeX/Images/logoUniv.jpg}
+				\includegraphics[width=80px]{./Template LaTeX/Images/logoUniv.jpg}
 			}
 		\end{figure}
 		%-------------------------------------------------------------------------- 05
@@ -64,7 +64,7 @@
 		\begin{figure}[htbp]
 		\hbox{
 			\hspace*{5cm}
-			\includegraphics[width=150px]{/home/mohamed/mes_fichier/CADORIM/LaTeX/pfe/Template LaTeX/Images/cado_logo.png}
+			\includegraphics[width=150px]{./Template LaTeX/Images/cado_logo.png}
 		} 
 		\end{figure}
 		
