--- a/document.tex
+++ b/document.tex
@@ -188,12 +188,15 @@
 	\textbf{APK} : Android Package Kit \newline
 	\textbf{IDE} : Integrated Development Environment (Environnement de Développement Intégré) \newline
 	\textbf{MERISE} : Méthode d’Étude et de Réalisation Informatique par les Sous-Ensembles ou pour les Systèmes d’Entreprise \newline
-	\textbf{OPT} : One-Time Password \newline
+%	\textbf{OPT} : One-Time Password \newline
 	\textbf{SGBD} : Système de Gestion de Bases de Données \newline
 	\textbf{SGBDR} : Système de Gestion de Bases de Données Relationnelle \newline
-	\textbf{SOA} : Service Oriented Architecture \newline
+%	\textbf{SOA} : Service Oriented Architecture \newline
 	\textbf{OCR} : Optical Character Recognition  \newline
-	\textbf{MRZ} : Machine-Readable Zone  
+	\textbf{MRZ} : Machine-Readable Zone   \newline
+	\textbf{UX} : User Experience
+	 \newline  
+	\textbf{UI} : User Interface  
 	\thispagestyle{empty}
 	
 	\tableofcontents
@@ -201,6 +204,7 @@
 	\thispagestyle{empty}
 	\input{./Template LaTeX/TeXFiles/Introduction}
 	\input{./Template LaTeX/TeXFiles/PresentationDeLaSociete}
+	\input{./Template LaTeX/TeXFiles/Analyse}
 	\input{./Template LaTeX/TeXFiles/EnvironnementDeTravail}
 	\input{./Template LaTeX/TeXFiles/Realisation}
 	\input{./Template LaTeX/TeXFiles/Interface}
