--- a/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
+++ b/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
@@ -1,7 +1,9 @@
-\chapter{Présentation de l’entreprise}
+\chapter{Contexte général du projet}
+%\chapter{Présentation de l’entreprise}
 \label{chap:introduction}
+\section{Présentation du lieu de stage}
 %\pagenumbering{arabic}
-\section{Introduction}
+\subsection{Introduction}
 \begin{figure}[h]
 	\includegraphics[scale=0.14]{./Template LaTeX/Images/cado_logo.png}
 	\centering
@@ -20,7 +22,7 @@ CADORIM a été élu comme le champion de Banque Centrale de Mauritanie (BCM )
 1ère édition 2019 Fintech Challenge,
 Le siège social de CADORIM est situé à marche capital , Nouakchott, Mauritanie,
 immatriculée au registre du commerce.
-\section{Missions}
+\subsection{Missions}
 CADORIM offre une large palette de prestations organisées autour des activités suivantes :
 \begin{enumerate}
 	
@@ -29,7 +31,11 @@ CADORIM offre une large palette de prestations organisées autour des activités
 	\item Des agences des reçoivent d'argent et de service client
 	
 \end{enumerate}
-\section{Planification du projet}
+\subsection{Organigramme}
+\begin{comment}
+	content...
+
+\subsection{Planification du projet}
 J'effectuais le diagramme de Gantt, pour avoir une meilleure compréhension de la chronologie des étapes de mon projet.
 \newline
 \newline
@@ -45,5 +51,40 @@ données brutes du cahier de charge
 données provenant de la conception.
 \item Déploiement : externalisation des ressources.
 \end{enumerate}
+\end{comment}
+\section{Description du projet}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% New add from Introduction %%%%%%%%%%%%%%%%%%%%%
+
+Savoir qui est votre client et adopter des protocoles pour prévenir la criminalité financière sont des défis permanents pour les institutions financières. De manière significative, les institutions financières (y compris les banques, les coopératives de crédit et les sociétés financières du Fortune 50) doivent se conformer à un ensemble des réglementations de plus en plus complexes pour la vérification de l'identité des clients appelée KYC.
+
+KYC, également connu sous le nom de "Know Your Customer" ou "Know Your Client", est un ensemble de procédures permettant de vérifier l'identité d'un client avant ou pendant les transactions avec les banques et autres institutions financières. Le respect des réglementations KYC peut aider à tenir à distance le blanchiment d'argent, le financement du terrorisme et d'autres stratagèmes de fraude courants. En vérifiant d'abord l'identité et les intentions d'un client au moment de l'ouverture du compte, puis en comprenant ses habitudes de transaction, les institutions financières sont en mesure d'identifier plus précisément les activités suspectes. 
+
+Les institutions financières sont soumises à des normes de plus en plus strictes en matière de lois KYC. Ils doivent dépenser plus d'argent pour se conformer à KYC ou être passibles de lourdes amendes. Ces réglementations signifient que presque toutes les entreprises, plateformes ou organisations qui interagissent avec une institution financière pour ouvrir un compte ou effectuer des transactions devront se conformer à ces obligations.
+
+La gestion de la relation client (CRM) est la combinaison de pratiques, de stratégies et de technologies que les entreprises utilisent pour gérer et analyser les interactions et les données client tout au long du cycle de vie du client. L'objectif est d'améliorer les relations de service client, de contribuer à la fidélisation de la clientèle et de stimuler la croissance des ventes. Les systèmes CRM compilent les données client à travers différents canaux, ou points de contact, entre le client et l'entreprise, qui peuvent inclure le site Web de l'entreprise, le téléphone, le chat en direct, le publipostage, les supports marketing et les réseaux sociaux. Les systèmes CRM peuvent également donner aux membres du personnel en contact avec les clients des informations détaillées sur les informations personnelles des clients, l'historique des achats, les préférences et les préoccupations d'achat.
+
+
+\subsection{Motivations}    
+
+KYC est un moyen de rendre la vérification de l'identité des clients plus précise et moins vulnérable à la fraude.
+
+KYC doivent être effectuées lors de l'intégration d'un nouveau client, mais il est préférable de répéter ces vérifications de temps en temps, pour s'assurer que tout est comme il se doit. En surveillant les comptes clients de cette manière, les comportements suspects peuvent être signalés plus rapidement.
+
+Un système CRM fournit des flux de travail automatisés qui permettent à votre équipe marketing de consacrer plus de temps à des tâches stratégiques, telles que la création de campagnes marketing qui résonnent, l'analyse des données de ces campagnes et le test de différentes approches basées sur ces analyses. Les agents du service client peuvent passer leur temps à travailler avec des clients qui ont des questions, des problèmes ou des besoins plus complexes. En bref, avec des processus de service client plus efficaces, les entreprises peuvent établir de meilleures relations avec leurs clients.
+
+\subsection{Problématiques}	
+
+En réalité, la réalisation d'une application,qui applique le principe de KYC et integre un  système CRM,
+nécessite
+de faire face à des problématiques diverses et complexes. Ainsi, la société a décidé de se contenter,
+dans un premier temps, Mise en place d’un système d’extration des donnees à partir des images (carte d'identité ou passeport) et traitement des ces donnees.
+Ce sujet soulève de nombreuses questions aux implications différentes. Comment peut extraire le texte apartir de l'image? Comment sera-t-il traité ? Comment peut-il être utilisé dans le principe KYC ? Comment pouvons-nous obtenir un système CRM intégré ?
+
+
+\subsection{Objectifs}
+
+La mise en place d'une application pour appliquer l'ide de KYC en basant sur les différent technologie disponible . En basan sur l'extraction du text apartir d'une imange OCR on peut extracter la code MRZ apartir d'une imange du piece d'idendite ou passport est passe le code a un algorithem qui permer de d'etecter les information personnel.
+
+
 
 
