--- a/Template LaTeX/TeXFiles/Introduction.tex
+++ b/Template LaTeX/TeXFiles/Introduction.tex
@@ -1,6 +1,6 @@
 \let\cleardoublepage\clearpage
 
-\chapter{Introduction}
+\chapter{Introduction générale}
 \label{sec:DescriptionDuProjet}
 
 Savoir qui est votre client et adopter des protocoles pour prévenir la criminalité financière sont des défis permanents pour les institutions financières. De manière significative, les institutions financières (y compris les banques, les coopératives de crédit et les sociétés financières du Fortune 50) doivent se conformer à un ensemble des réglementations de plus en plus complexes pour la vérification de l'identité des clients appelée KYC.
